tests/negative/test_cast_owning.orb
data Foo;

fnc dropFoo (val:Foo::noDrop) ();

data Foo {
    x:i32
}::((drop dropFoo));

fnc dropFoo (val:Foo::noDrop) () {};

fnc main () () {
    sym f:Foo;
    cast (Foo cn) f;
};